2007-10-16  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/slaves.py (BuildSlavesResource.body): fix
	timestamp, I was using %M (minutes) where I meant to be using
	%b (abbreviated month name). Closes #109.

2007-10-13  Brian Warner  <warner@lothar.com>

	* README (COPYING): make it clear that buildbot is distributed under
	the GPL (version 2)
	* COPYING: add a copy of the GPLv2 to the source tree
	* MANIFEST.in: .. and to the source distribution too

2007-10-10  Brian Warner  <warner@lothar.com>

	* buildbot/status/builder.py (Status.getURLForThing): update this
	to match new URL layout, I completely forgot about it. Closes #112.
	* buildbot/test/test_web.py (GetURL): add unit tests

	* buildbot/status/web/build.py (BuildsResource.getChild): fix
	silly typo which prevented the Build page from ever offering
	control options like 'Stop Build'. Thanks to Aaron Hsieh for the
	catch. Closes #114.
	* buildbot/test/test_webparts.py (Webparts._do_page_tests): it'd
	be nice to test this

	* buildbot/__init__.py (version): bump to 0.7.6+ while between
	releases
	* docs/buildbot.texinfo: same

2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.6
	* docs/buildbot.texinfo: same

2007-09-30  Brian Warner  <warner@lothar.com>

	* NEWS: small updates, remove duplicate items from the 0.7.5 notes
	* setup.py: install all test files from buildbot/test/mail/* . Also
	update URL to point at buildbot.net
	* MANIFEST.in: update with new files

	* buildbot/status/web/baseweb.py (WebStatus.setupSite): ugh, yes
	auto-create an empty public_html directory, otherwise we get
	internal server errors instead of 404s.

	* README: reference buildbot.net, remove CVSToys section (does
	anyone still use it?)

	* buildbot/status/web/baseweb.py (WebStatus): emit a useful log
	message when public_html/ is missing (indicating that you should
	probably run 'upgrade-master'), and don't auto-create an empty
	directory in that case.
